--- a/index.html
+++ b/index.html
@@ -619,30 +619,60 @@ function statement(){
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
-
-    //   var button4 = canvas.append("svg:image")
-    //     .attr('x', 30)
-    //     .attr('y', 300)
-    //     .attr('width', 300)
-    //     .attr('height', 90)
-    //     .attr("xlink:href", "button.png");
-
-    //         canvas.append("text")
-    //           .attr("x", 90)//+30
-    //           .attr("y", 355)//+55
-    //           .text("WHO ARE MY AD'S?")
-    //           .style("font", "25px 'stellar'")
-    //           .style("fill", "black");
-
-
-    //   svg.on('click', function() {
-    //   //console.log("You clicked")
-    // pageLikes(); 
-    // });
-
 }// end of statement function
 
+
 //============================================================== 
+
+    
+  
+function fact(){
+
+document.body.scrollTop = 0;
+document.documentElement.scrollTop = 0;
+
+document.getElementById('Ads').style.visibility = 'visible';
+
+    var rect = canvas.append("rect")
+        .attr("x", 0)
+        .attr("y", 0)
+        .attr("width", width)
+        .attr("height", height)
+        .style("fill", "black");
+
+    var text = canvas.append("text")
+      .attr("x",50)
+      .attr("y", 120)
+      .text("FACEBOOK MAKES $22,311")
+      .style("font", "80px 'stellar'")
+      .style("fill", "white");
+
+
+    canvas.append("text")
+      .attr("x",50)
+      .attr("y", 240)
+      .text("FROM DIGITAL AD'S")
+      .style("font", "80px 'stellar'")
+      .style("fill", "white");
+
+
+
+    var newText = canvas.append("text")
+      .attr("x",width/4 - 40)
+      .attr("y", height - 130)
+      .text("IN THE PAST 3 MINUTES")
+      .style("font", "100px 'stellar'")
+      .style("opacity", 0)
+      .transition()
+      .delay(function(d,i){ return 700*i; }) //controls how many come on the screen
+      .duration(6000) //controls how fast is changes opacity
+      .style("opacity", 1.0)
+      .style("fill", "white"); 
+
+    } // end of fact function
+
+//============================================================== 
+
 
 function fbLogout() {
 
@@ -651,6 +681,8 @@ function fbLogout() {
             window.location.reload();
         });
     }
+
+//============================================================== 
 
 
 //************************************************************
@@ -691,7 +723,7 @@ function fbLogout() {
 <button 
   class = "button3"
   id="Ads" 
-  onclick="adFact()">Show me the money
+  onclick="fact()">Show me the money
 </button> 
 
 </body>
