--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ var spaceT = 1;
 
       canvas.append("text")
         .attr("x", 60)
-        .attr("y", (120 + 30) + (10*tSpace))
+        .attr("y", ((120 + 30) + (10*tSpace)))
         .text(names[j])
         .style("font", "15px 'stellar'")
         .style("fill", "white");  
