--- a/index.html
+++ b/index.html
@@ -613,14 +613,14 @@ function statement(){
       var text = canvas.append("text")
       .attr("x",50)
       .attr("y", 120)
-      .text("Facebook is free for it’s users because it makes money") //$7437 every minute 
+      .text("FACEBOOK IS FREE FOR ITS USERS BECAUSE IT MAKES MONEY") //$7437 every minute 
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
     canvas.append("text")
       .attr("x",50)
       .attr("y", 240)
-      .text("from digital ad’s that use our data")
+      .text("FROM DIGITAL AD'S THAT USE OUR DATA")
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
