--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ var spaceT = 1;
 
       canvas.append("text")
         .attr("x", 60)
-        .attr("y", ((120 + 30) + (10*tSpace)))
+        .attr("y", ((120 + (10*tSpace))+30))
         .text(names[j])
         .style("font", "15px 'stellar'")
         .style("fill", "white");  
