--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ function statement(){
 function fact(){
 
   document.getElementById('Vis').style.visibility = 'visible';
-  document.getElementById('Ads').style.visibility = 'visible';
+  document.getElementById('Ads').style.visibility = 'hidden';
 
 document.body.scrollTop = 0;
 document.documentElement.scrollTop = 0;
