--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ function page3(){
   document.getElementById('next').style.visibility = 'hidden';
   document.getElementById('Ads').style.visibility = 'hidden';
   document.getElementById('Vis').style.visibility = 'hidden';
-  document.getElementById('end').style.visibility = 'hidden';
+  document.getElementById('endB').style.visibility = 'hidden';
 
   document.getElementById('next2').style.visibility = 'visible';
 
@@ -518,7 +518,7 @@ function statement(){
   document.getElementById('next2').style.visibility = 'hidden';
   document.getElementById('Vis').style.visibility = 'hidden';
   document.getElementById('Ads').style.visibility = 'visible';
-  document.getElementById('end').style.visibility = 'hidden';
+  document.getElementById('endB').style.visibility = 'hidden';
 
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
@@ -556,7 +556,7 @@ function fact(){
 
   document.getElementById('Vis').style.visibility = 'visible';
   document.getElementById('Ads').style.visibility = 'hidden';
-  document.getElementById('end').style.visibility = 'hidden';
+  document.getElementById('endB').style.visibility = 'hidden';
 
 document.body.scrollTop = 0;
 document.documentElement.scrollTop = 0;
@@ -615,7 +615,7 @@ function generalVis(){
   document.getElementById('next2').style.visibility = 'hidden';
   document.getElementById('Ads').style.visibility = 'hidden';
   document.getElementById('Vis').style.visibility = 'hidden';
-  document.getElementById('end').style.visibility = 'visible';
+  document.getElementById('endB').style.visibility = 'visible';
 
 
     var rect = canvas.append("rect")
@@ -686,7 +686,7 @@ function end(){
   document.getElementById('next2').style.visibility = 'hidden';
   document.getElementById('Ads').style.visibility = 'hidden';
   document.getElementById('Vis').style.visibility = 'hidden';
-  document.getElementById('end').style.visibility = 'hidden';
+  document.getElementById('endB').style.visibility = 'hidden';
 
 
 var rect = canvas.append("rect")
