--- a/index.html
+++ b/index.html
@@ -58,6 +58,25 @@
 
     }
 
+            .button4 {
+      background-color: #000000;
+      border: none;
+      color: white;
+      padding: 10px 60px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      position:absolute;
+      border-radius: 2px;
+      top: 700px; 
+
+
+    }
+
+
 
     .img{
       position:absolute;
@@ -671,7 +690,7 @@ function fbLogout() {
 </button> 
 
 <button 
-  class = "button3"
+  class = "button4"
   id="Ads" 
   onclick="fact()">Show me the money
 </button> 
