--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@ var spaceT = 1;
         .style("font", "15px 'stellar'")
         .style("fill", "white");  
 
-        tSpace+10;
+        tSpace++;
+        tSpace = tSpace*10; 
 
     } //end of for loop
 
