--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ canvas.append("text")
   .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
   .duration(200) //controls how fast is changes opacity
   .style("opacity", 1.0)
-  .remove(); 
+  //.remove(); 
 
 }
 
