--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ var spaceT = 1;
         .style("fill", "white");  
 
         tSpace++;
-        tSpace = tSpace*10; 
+        tSpace = tSpace + 30; 
 
     } //end of for loop
 
