--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ document.documentElement.scrollTop = 0;
         .attr("x", 0)
         .attr("y", 0)
         .attr("width", width)
-        .attr("height", height)
+        .attr("height", 1000)
         .style("fill", "black");
 
     var text = canvas.append("text")
