--- a/index.html
+++ b/index.html
@@ -645,11 +645,34 @@ var text = canvas.append("text")
 
 // }// end of for loop
 
+repeat();
 
 
-for (var t = 0; t < 2000; t++) {
 
-  canvas.append("text")
+// for (var t = 0; t < 2000; t++) {
+
+//   canvas.append("text")
+//     .attr("x", 50)
+//     .attr("y", 200)
+//     .text("Y")
+//     .style("font", "60px 'stellar'")
+//     .style("fill", "black")
+//     .style("opacity", 0)
+//     .transition()
+//     .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
+//     .duration(200*t) //controls how fast is changes opacity
+//     .style("opacity", 1.0)
+//     .on("end", repeat); 
+
+
+// }// end of for loop
+
+
+} //end of the function
+
+function repeat()
+{
+    canvas.append("text")
     .attr("x", 50)
     .attr("y", 200)
     .text("Y")
@@ -660,14 +683,9 @@ for (var t = 0; t < 2000; t++) {
     .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
     .duration(200*t) //controls how fast is changes opacity
     .style("opacity", 1.0)
+    .remove()
     .on("end", repeat); 
-
-
-}// end of for loop
-
-
-} //end of the function
-
+}
 function fbLogout() {
 
         FB.logout(function (response) {
