--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ repeat();
 
 function repeat()
 {
-    canvas.append("text")
+   var text = canvas.append("text")
     .attr("x", 50)
     .attr("y", 200)
     .text("Y")
