--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ document.documentElement.scrollTop = 0;
 
 
     var newText = canvas.append("text")
-      .attr("x",width/4 - 40)
+      .attr("x",50)
       .attr("y", height - 130)
       .text("IN THE PAST 3 MINUTES")
       .style("font", "100px 'stellar'")
