--- a/index.html
+++ b/index.html
@@ -704,7 +704,10 @@ function repeat()
     .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
     .duration(200) //controls how fast is changes opacity
     .style("opacity", 1.0)
-    .remove()
+    .transition()
+    .delay(function(d,i){ return 100*i; }) //controls how many come on the screen
+    .duration(200) //controls how fast is changes opacity
+    .style("opacity", 0)
     .on("end", repeat); 
 }
 function fbLogout() {
